[refactor] 코드 변경 - #188